<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bkg4"
    tools:context=".DataEntryActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_shape">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:id="@+id/username_profile"
                android:layout_marginTop="40dp"
                android:textSize="15sp"
                android:padding="2dp"
                android:text="@string/your_username"
                android:textColor="@color/gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:id="@+id/inputName_profile"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="2dp"
                android:textColor="@color/gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:id="@+id/password_profile"
                android:textSize="15sp"
                android:text="@string/your_password"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:textColor="@color/gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/inputPassword_profile"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="2dp"
                android:textColor="@color/gray"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/checkBoxText1"
                android:textSize="13sp"
                android:text="@string/subscribe_to_the_latest_news"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:textColor="@color/gray"
                app:drawableLeftCompat="@drawable/check_mark" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/checkBoxText2"
                android:textSize="13sp"
                android:text="@string/notifications_are_enabled"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:textColor="@color/gray"
                app:drawableLeftCompat="@drawable/check_mark" />

            <TextView
                android:id="@+id/checkBoxText3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:padding="2dp"
                android:text="@string/the_receipt_of_cookies_is_approved"
                android:textColor="@color/gray"
                android:textSize="13sp"
                app:drawableLeftCompat="@drawable/check_mark" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/exit"
                android:id="@+id/exitButton"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/gray"
                app:cornerRadius = "20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>